--- a/css/main.css
+++ b/css/main.css
@@ -1156,7 +1156,7 @@ hr {
 /* page title
 ---------------------------------------------------------------------- */
 #page-title {
-	background: #12151b url(../images/hero-bg.jpg) no-repeat center center fixed;
+	background: #12151b url(../images/hero-bg.jpg) no-repeat center center;
 	-webkit-background-size: cover !important;
 	-moz-background-size: cover !important;
 	background-size: cover !important;
