--- a/css/main.css
+++ b/css/main.css
@@ -333,7 +333,7 @@ input[type="checkbox"] {
 	border-top: 1.1em solid rgba(255, 255, 255, 0.2);
 	border-right: 1.1em solid rgba(255, 255, 255, 0.2);
 	border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
-	border-left: 1.1em solid ##3d2ede;
+	border-left: 1.1em solid #3d2ede;
 	-webkit-animation: load 1.1s infinite linear;
 	animation: load 1.1s infinite linear;
 }
